--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ th, td {
 <div id="info">
 <table>
   <tr>
+    <td>18th February 2023</td>
+    <td>The punishment of not seeking counsel</td>
+    <td><a href="SAB-CLASS/S18022023.pdf" target="new">Download</a></td>
+  </tr>
+  <tr>
     <td>11th February 2023</td>
     <td>Enduring and overcoming</td>
     <td><a href="SAB-CLASS/S11022023.pdf" target="new">Download</a></td>
