--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ th, td {
 
 <div id="info">
 <table>
+    <tr>
+    <td>04th March 2023</td>
+    <td>Introduction to Rightousness</td>
+    <td><a href="SAB-CLASS/S04032023.pdf" target="new">Download</a></td>
+  </tr>		
   <tr>
     <td>19th February 2023</td>
     <td>Purim</td>
