--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@ th, td {
 
 <div id="info">
 <table>
+  <tr>
+    <td>11th March 2023</td>
+    <td>Introduction to Rightousness 2</td>
+    <td><a href="SAB-CLASS/S11032023.pdf" target="new">Download</a></td>
+  </tr>		
     <tr>
     <td>04th March 2023</td>
-    <td>Introduction to Rightousness</td>
+    <td>Introduction to Rightousness 1</td>
     <td><a href="SAB-CLASS/S04032023.pdf" target="new">Download</a></td>
   </tr>		
   <tr>
